# pact-python

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/: codepilot-instructions.md
.github/workflows/: sync-from-pact.yml
scripts/: build_sync_summary.py
src/pact/: __init__.py  config_string.py  engine.py  models.py
sync-state/: pytest-summary.txt  upstream-pact.json
tests/: __init__.py  test_core.py  test_upstream_fixtures.py
tests/helpers/: __init__.py  upstream_fixtures.py
